--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <h1>SIGNIN</h1>
 <div class="col-sm-8">
-    <form action="/sign-in" method="post">
+    <form action="http://localhost:3000/sign-in" method="post">
         <div class="form-group row">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
             <div class="col-sm-10">
@@ -27,17 +27,17 @@
 <hr>
 <h1>SIGNUP</h1>
 <div>
-    <form action="/sign-up" method="post">
+    <form action="http://localhost:3000/sign-up" method="post">
         <div class="form-group row">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="username" id="username" placeholder="Username">
+                <input type="text" class="form-control" name="userName" id="userName" placeholder="Username">
             </div>
         </div>
         <div class="form-group row">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" name="email" id="email" placeholder="johndoe@gmail.com">
+                <input type="email" class="form-control" name="emailAddress" id="emailAddress" placeholder="johndoe@gmail.com">
             </div>
         </div>
 
@@ -64,3 +64,5 @@
         </div>
     </form>
 </div>
+
+<a href="http://localhost:3000/sign-out">Sign Out</a>
