--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,68 +1,4 @@
-<h1>SIGNIN</h1>
-<div class="col-sm-8">
-    <form action="http://localhost:3000/sign-in" method="post">
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="userName" name="userName"
-                    placeholder="Username">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="password" name="password"
-                    placeholder="Password">
-            </div>
-        </div>
-        <div class="row">
-            <div class="local-signin col-sm-8">
-                <button class="btn-local" id="local-btn-in" type="submit">Sign-In</button>
-            </div>
-        </div>
-
-    </form>
-
-</div>
+<app-signInForm></app-signInForm>
 <hr>
-<h1>SIGNUP</h1>
-<div>
-    <form action="http://localhost:3000/sign-up" method="post">
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="userName" id="userName" placeholder="Username">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" name="emailAddress" id="emailAddress" placeholder="johndoe@gmail.com">
-            </div>
-        </div>
+<app-signUpForm></app-signUpForm>
 
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="password" id="password" placeholder="Password">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Account Type</label>
-            <div class="col-sm-10">
-                <select type="text" class="form-control" name="userType" id="userType">
-                    <option disabled>Select your Account Type</option>
-                    <option value="Participant">Participant</option>
-                    <option value="Organizer">Organizer</option>
-                </select>
-            </div>
-        </div>
-        <div class="row">
-            <div class="local-signin col-sm-8">
-                <button type="submit" class="btn-local btn btn-success" id="local-btn">Sign-Up</button>
-            </div>
-        </div>
-    </form>
-</div>
-
-<a href="http://localhost:3000/sign-out">Sign Out</a>
