--- a/src/app/signUpForm/signUpForm.component.html
+++ b/src/app/signUpForm/signUpForm.component.html
@@ -1,5 +1,67 @@
 <h1>SIGNUP</h1>
-<div>
+<div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="userName">Username</label>
+        <input
+          type="text"
+          class="form-control"
+          id="signUpUserName"
+          required
+          [(ngModel)]="user.userName"
+          name="userName"
+        />
+      </div>
+  
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input
+          class="form-control"
+          id="emailAddress"
+          required
+          [(ngModel)]="user.emailAddress"
+          name="emailAddress"
+          type="email"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          class="form-control"
+          id="signUpPassword"
+          required
+          [(ngModel)]="user.password"
+          name="password"
+        />
+      </div>
+      <div class="form-group">
+          <label for="type">User Type</label>
+          <select
+            class="form-control"
+            id="userType"
+            required
+            [(ngModel)]="user.userType"
+            name="userType">
+                <option disabled>Select Your Account Type</option>
+                <option value="participant">Participant</option>
+                <option value="Organizer">Organizer</option>
+        </select>
+      </div>
+  
+      <button (click)="signUpUser()" class="btn btn-success">Submit</button>
+    </div>
+  
+    <div *ngIf="submitted">
+      <h4>You registered successfully!</h4>
+      <button class="btn btn-success" (click)="newUser()">Add</button>
+    </div>
+  </div>
+
+
+
+
+<!-- <div>
     <form action="http://localhost:3000/sign-up" method="post">
         <div class="form-group row">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
@@ -36,4 +98,4 @@
             </div>
         </div>
     </form>
-</div>
+</div> -->
