fixed signin and signout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,7 +306,7 @@
     <div class="spacer"></div>
   <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Twitter">
     
-    <button><a href="http://localhost:3000/sign-out" style="text-decoration: none;">Sign Out</a></button>
+    <button class="btn btn-success" (click)="signOutUser()">Sign Out</button>
     
   </a>
 </div>
