--- a/src/app/signInForm/signInForm.component.html
+++ b/src/app/signInForm/signInForm.component.html
@@ -1,26 +1,33 @@
 <h1>SIGNIN</h1>
-<div class="col-sm-8">
-    <form action="http://localhost:3000/sign-in" method="post">
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Username</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="userName" name="userName"
-                    placeholder="Username">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="colFormLabel" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="password" name="password"
-                    placeholder="Password">
-            </div>
-        </div>
-        <div class="row">
-            <div class="local-signin col-sm-8">
-                <button class="btn-local" id="local-btn-in" type="submit">Sign-In</button>
-            </div>
-        </div>
-
-    </form>
-
-</div>
+<div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="userName">Username</label>
+        <input
+          type="text"
+          class="form-control"
+          id="signInUserName"
+          required
+          [(ngModel)]="signInUser.userName"
+          name="userName"
+        />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          class="form-control"
+          id="signInPassword"
+          required
+          [(ngModel)]="signInUser.password"
+          name="password"
+        />
+      </div>
+  
+      <button (click)="signInUserFunction()" class="btn btn-success">Submit</button>
+    </div>
+  
+    <div *ngIf="submitted">
+      <h4>You registered successfully!</h4>
+      <button class="btn btn-success" (click)="newUser()">Add</button>
+    </div>
+  </div>
