quick signout fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -304,10 +304,6 @@
   />
   <span>Welcome</span>
     <div class="spacer"></div>
-  <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Twitter">
-    
-    <button class="btn btn-success" (click)="signOutUser()">Sign Out</button>
-    
-  </a>
+    <button class="btn btn-success" (click)="signOutUserFunction()">Sign Out</button>
 </div>
 <router-outlet></router-outlet>
