--- a/src/app/signUpForm/signUpForm.component.html
+++ b/src/app/signUpForm/signUpForm.component.html
@@ -49,7 +49,7 @@
         </select>
       </div>
   
-      <button (click)="signUpUser()" class="btn btn-success">Submit</button>
+      <button (click)="signUpUserFunction()" class="btn btn-success">Submit</button>
     </div>
   </div>
 
