--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
 <app-create-tournament-form></app-create-tournament-form>
+<hr>
+<app-display></app-display>
+<hr>
+<app-single-bracket></app-single-bracket>
