setting up parent-child comps

--- a/src/app/check-tournament-parent/check-tournament-parent.component.html
+++ b/src/app/check-tournament-parent/check-tournament-parent.component.html
@@ -1,1 +1,3 @@
-<p>check-tournament-parent works!</p>
+<p>Select tournament here</p>
+<app-check-tournament-child [selectedTournament] = "tournament"></app-check-tournament-child>
+
