working view tournament. updated migrations with references.

--- a/src/app/check-tournament-child/check-tournament-child.component.html
+++ b/src/app/check-tournament-child/check-tournament-child.component.html
@@ -1,2 +1,7 @@
-<p>See tournament here</p>
+<div *ngIf="selectedTournament">
 {{selectedTournament.name}}
+{{selectedTournament.description}}
+{{selectedTournament.contact}}
+{{selectedTournament.type}}
+<button (click)="joinTournament()">Join</button>
+</div>
