--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<app-create-tournament-form></app-create-tournament-form>
+<app-create-tournament-form [userType] = "kindOfUser"></app-create-tournament-form>
 <hr>
 <app-check-tournament-parent [tourneyList] = "tournamentMasterList"></app-check-tournament-parent>
