--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <app-create-tournament-form></app-create-tournament-form>
 <hr>
 <app-check-tournament-parent [tourneyList] = "tournamentMasterList"></app-check-tournament-parent>
+<hr>
+<app-single-bracket></app-single-bracket>
