--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,6 @@
 <hr>
 <app-check-tournament-parent [tourneyList] = "tournamentMasterList"></app-check-tournament-parent>
 <hr>
+<app-display></app-display>
+<hr>
 <app-single-bracket></app-single-bracket>
