participant view and 1/2 organizer view

--- a/src/app/check-tournament-child/check-tournament-child.component.html
+++ b/src/app/check-tournament-child/check-tournament-child.component.html
@@ -3,5 +3,6 @@
 {{selectedTournament.description}}
 {{selectedTournament.contact}}
 {{selectedTournament.type}}
+<app-display></app-display>
 <button (click)="joinTournament()">Join</button>
 </div>
