displaying list of participants per tournament

--- a/src/app/check-tournament-child/check-tournament-child.component.html
+++ b/src/app/check-tournament-child/check-tournament-child.component.html
@@ -4,5 +4,5 @@
 {{selectedTournament.contact}}
 {{selectedTournament.type}}
 <app-display></app-display>
-<button (click)="joinTournament()">Join</button>
+<button (click)="joinTournament(selectedTournament)">Join</button>
 </div>
